# extsort

./: .gitignore  default.nix  extsort.cabal  stack.yaml
test/: Gen.hs  Main.hs
