cabal-version: 2.2
name: extsort
version: 0.1.0.0
license-file: LICENSE
author: Travis Athougies
maintainer: travis@athougies.net
category: Web
build-type: Simple


library
  build-depends: base >=4.7 && <5.0,
                 bytestring >=0.10 && <0.11,
                 vector, vector-algorithms,
                 attoparsec, deepseq, parallel, mtl, unix,
                 pqueue, attoparsec-binary,
                 mutable-containers, streaming
  ghc-options: -O3 -funbox-strict-fields -Wall -Werror -fprof-auto -fno-warn-deprecated-flags
  default-language: Haskell2010
  default-extensions: DeriveGeneric
                      GeneralizedNewtypeDeriving
                      OverloadedStrings
                      TupleSections
                      ScopedTypeVariables
                      RankNTypes
                      GADTs
                      BangPatterns
                      DataKinds
                      KindSignatures
                      BangPatterns
  if flag(dump-core)
     build-depends: dump-core
     ghc-options:  -fplugin=DumpCore -fplugin-opt DumpCore:core-html
  exposed-modules:
    Data.External.Sort
    Data.External.Tape

executable sort-hs
  build-depends: base >=4.7 && <5.0,
                 extsort,
                 bytestring, attoparsec,
                 attoparsec-binary,
                 streaming-attoparsec,
                 streaming-bytestring,
                 streaming
  ghc-options: -threaded -O3 -funbox-strict-fields -Wall -Werror -fno-warn-deprecated-flags
  default-language: Haskell2010
  default-extensions: DeriveGeneric
                      GeneralizedNewtypeDeriving
                      OverloadedStrings
                      TupleSections
                      ScopedTypeVariables
                      RankNTypes
  if flag(dump-core)
     build-depends: dump-core
     ghc-options:  -fplugin=DumpCore -fplugin-opt DumpCore:core-html
  hs-source-dirs: test
  main-is: Main.hs

executable randoms-hs
  build-depends: base >=4.7 && <5.0, random
  ghc-options: -O2
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Gen.hs

flag dump-core
  description: Dump core using the dump-core utility
  default: False
